--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-fullstack-simple",
+  "name": "JavaScript-FullStack",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,24 +13,25 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "css-loader": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "nodemon": "^1.18.9",
-    "style-loader": "^0.23.1",
-    "timeago.js": "^4.0.0-beta.2",
-    "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14"
-  },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "fs-extra": "^7.0.1",
-    "mongoose": "^5.4.5",
+    "cross-env": "^6.0.0",
+    "dotenv": "^8.1.0",
+    "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
+    "mongoose": "^5.7.1",
     "morgan": "^1.9.1",
-    "multer": "^1.4.1"
+    "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "nodemon": "^1.19.2",
+    "style-loader": "^1.0.0",
+    "timeago.js": "^4.0.0-beta.2",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1"
   }
 }
